--- a/webview-ui/src/index_graph_editor.css
+++ b/webview-ui/src/index_graph_editor.css
@@ -19,3 +19,10 @@ code {
   padding: 0;
   box-sizing: border-box;
 }
+
+main {
+    margin: 0;
+    padding: 0;
+    width: 100vw;
+    height: 100vh;
+}
